syntax = "proto3";
option csharp_namespace = "Ozon.Route256.Five.Orders.Grpc";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Orders
{
  rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
}

message GetOrderRequest {
  int64 id = 1;
}

message GetOrderResponse {
  int64 id = 1;
  int32 articles_count = 2;
  double total_price = 3;
  double total_weight = 4;
  OrderTypes order_type = 5;
  google.protobuf.Timestamp date_created = 6;
  Region region = 7;
  string status = 8;
  string customer_name = 9;
  Address delivery_address = 10;
  int64 phone = 11;
}

enum OrderTypes {
  pickup = 0;
  delivery = 1;
}

message Region {
  int64 id = 1;
  string name = 2;
}

message Address {
  string region = 1;
  string city = 2;
  string street = 3;
  string building = 4;
  string apartment = 5;
  double latitude = 6;
  double longitude = 7;
}

